k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: devops-project
spec:
  ingressClassName: nginx
  rules:
  - host: devops.local
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service
            port:
              number: 3500
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
